# grpc_examples

./: .gitignore  README.md
cpp/: CMakeLists.txt  system_manager_client.cpp  system_manager_server.cpp
cpp/cmake/: grpcexamples.cmake
python/: generate.py  system_manager_client.py  system_manager_server.py  system_manager_types.py
python/proto/: systemmanagerservice.proto  systemmanagerservice_signals.proto  systemmanagerservice_types.proto
